[project]
name = "ausseabed.mbesgc"
version = "0.1.1"
description = "Quality Assurance checks for grid data derived from Multi Beam Echo Sounder data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
  { name = "Lachlan Hurst", email = "lachlan.hurst@gmail.com" },
  { name = "Matt Boyd", email = "matt.boyd@csiro.au" }
]

dependencies = [
  "ausseabed.qajson",
  "affine",
  "click",
  "numpy",
  "scipy",
  "gdal",
  "geojson",
]

[project.urls]
Homepage = "https://github.com/ausseabed/mbes-grid-checks"
Repository = "https://github.com/ausseabed/mbes-grid-checks"

[project.scripts]
mbesgc = "ausseabed.mbesgc.app.cli:cli"

[project.optional-dependencies]
test = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ausseabed"]

[tool.hatch.build.targets.sdist]
packages = ["ausseabed"]


[tool.mypy]
python_version = "3.12"

disable_error_code = ["import-untyped"]
namespace_packages = true
explicit_package_bases = true
